--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-graceful-exit": "^0.4.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
+    "lowdb": "^1.0.0",
     "npm-run-all": "^4.0.2",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
