Add /recordings/:id and history so you can reference previous recordings

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "lowdb": "^1.0.0",
+    "moment": "^2.19.1",
     "npm-run-all": "^4.0.2",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
