--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.17.1",
@@ -24,7 +25,7 @@
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "lowdb": "^1.0.0",
-    "moment": "^2.19.1",
+    "moment": "^2.19.2",
     "npm-run-all": "^4.0.2",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
