--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.17.1",
+    "capture-video-frame": "^0.1.2",
     "dotenv": "^4.0.0",
+    "downloadjs": "^1.4.7",
     "express": "^4.15.2",
     "express-graceful-exit": "^0.4.0",
     "fs": "0.0.1-security",
@@ -27,6 +29,8 @@
     "lodash": "^4.17.4",
     "lowdb": "^1.0.0",
     "moment": "^2.19.2",
+    "multer": "^1.3.0",
+    "multer-autoreap": "^0.1.3",
     "npm-run-all": "^4.0.2",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
