--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^1.0.0",
     "aws-s3-promisified": "^2.0.0",
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
@@ -25,6 +26,7 @@
     "downloadjs": "^1.4.7",
     "express": "^4.15.2",
     "express-graceful-exit": "^0.4.0",
+    "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "fs-extra": "^5.0.0",
     "gulp": "^3.9.1",
