--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
-    "puppeteer": "^0.12.0"
+    "puppeteer": "^0.12.0",
+    "serialport": "^6.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
