--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
     "puppeteer": "^0.12.0",
-    "serialport": "^6.0.4"
+    "serialport": "^6.0.4",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
