--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "engines": {
-    "node": "8.4.0"
-  },
   "scripts": {
     "start": "node app.js",
     "watch": "gulp watch",
@@ -16,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^1.0.0",
+    "animated-ellipsis": "^0.0.4",
     "aws-s3-promisified": "^2.0.0",
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
@@ -36,7 +34,6 @@
     "multer": "^1.3.0",
     "multer-autoreap": "^0.1.3",
     "npm-run-all": "^4.0.2",
-    "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
     "puppeteer": "^0.12.0",
