Add node engine spec to package.json bc async functions were breaking in dokku's default node

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "watch": "gulp watch",
     "dev": "npm-run-all --parallel start watch"
   },
+  "engines": {
+    "node": "8.4.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
