--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "puppeteer": "^0.12.0",
     "serialport": "^6.0.4",
     "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "to-sentence-case": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
