--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.13",
     "@google-cloud/speech": "^1.0.0",
     "animated-ellipsis": "^0.0.4",
     "aws-s3-promisified": "^2.0.0",
